parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> parsed
Rule 1     parsed -> program
Rule 2     parsed -> expr
Rule 3     program -> optcomments dir PYTHON newlines optdesc optscale optassignments sections
Rule 4     optdesc -> desc PYTHON newlines
Rule 5     optdesc -> empty
Rule 6     optscale -> scale PYTHON newlines
Rule 7     optscale -> empty
Rule 8     sections -> section_commented newlines sections
Rule 9     sections -> empty
Rule 10    section_commented -> optcomments section
Rule 11    optcomments -> COMMENT optnewlines optcomments
Rule 12    optcomments -> empty
Rule 13    section -> clocksection
Rule 14    section -> functionsection
Rule 15    section -> resetsection
Rule 16    section -> macrosection
Rule 17    section -> template_function_section
Rule 18    resetsection -> reset newlines blocklist end
Rule 19    clocksection -> clock ID newlines blocklist end
Rule 20    functionsection -> function ID LPAREN id_list RPAREN newlines blocklist end
Rule 21    template_function_section -> function ID LT macro_params GT LPAREN id_list RPAREN newlines blocklist end
Rule 22    macrosection -> macro DOLLAR ID macro_args newlines blocklist end
Rule 23    macro_args -> LPAREN macro_params RPAREN
Rule 24    macro_args -> empty
Rule 25    macro_params -> DOLLAR ID COMMA macro_params
Rule 26    macro_params -> DOLLAR ID
Rule 27    macro_params -> empty
Rule 28    newlines -> NEWLINE newlines
Rule 29    newlines -> NEWLINE
Rule 30    optnewlines -> newlines
Rule 31    optnewlines -> empty
Rule 32    id_list -> ID COMMA id_list
Rule 33    id_list -> ID
Rule 34    id_list -> empty
Rule 35    optassignments -> pythonassignment newlines optassignments
Rule 36    optassignments -> selectorassignment newlines optassignments
Rule 37    optassignments -> selector_define_block newlines optassignments
Rule 38    optassignments -> blocktag newlines optassignments
Rule 39    optassignments -> array_definition newlines optassignments
Rule 40    optassignments -> COMMENT newlines optassignments
Rule 41    optassignments -> empty
Rule 42    variable -> fullselector DOT ID
Rule 43    variable -> ID
Rule 44    variable -> ID LBRACK virtualinteger RBRACK
Rule 45    variable -> ID LBRACK expr RBRACK
Rule 46    optcomment -> COMMENT
Rule 47    optcomment -> empty
Rule 48    blocklist -> codeblock optcomment newlines blocklist
Rule 49    blocklist -> empty
Rule 50    codeblock -> comment_block
Rule 51    codeblock -> command_block
Rule 52    codeblock -> move_block
Rule 53    codeblock -> create_block
Rule 54    codeblock -> for_block
Rule 55    codeblock -> if_block
Rule 56    codeblock -> trigger_block
Rule 57    codeblock -> execute_block
Rule 58    codeblock -> while_block
Rule 59    codeblock -> switch_block
Rule 60    codeblock -> tell_block
Rule 61    codeblock -> function_call_block
Rule 62    codeblock -> template_function_call
Rule 63    codeblock -> method_call_block
Rule 64    codeblock -> macro_call_block
Rule 65    codeblock -> pythonassignment_block
Rule 66    codeblock -> assignment_block
Rule 67    codeblock -> selectorassignment_block
Rule 68    codeblock -> vector_assignment_block
Rule 69    codeblock -> vector_assignment_scalar_block
Rule 70    comment_block -> COMMENT
Rule 71    command_block -> COMMAND
Rule 72    move_block -> move fullselector relcoords
Rule 73    for_block -> for DOLLAR ID in PYTHON newlines blocklist end
Rule 74    trigger_block -> trigger fullselector DOT ID newlines blocklist end
Rule 75    codeblock -> as variable newlines blocklist end
Rule 76    codeblock -> as variable LPAREN ATID RPAREN newlines blocklist end
Rule 77    codeblock -> as variable do codeblock
Rule 78    codeblock -> as variable LPAREN ATID RPAREN do codeblock
Rule 79    codeblock -> as create_block newlines blocklist end
Rule 80    codeblock -> as create_block do codeblock
Rule 81    execute_block -> execute_items newlines blocklist end
Rule 82    execute_block -> execute_items do codeblock
Rule 83    execute_block -> execute_items then codeblock
Rule 84    execute_items -> execute_item
Rule 85    execute_items -> execute_item execute_items
Rule 86    execute_item -> if conditions
Rule 87    execute_item -> unless conditions
Rule 88    execute_item -> as fullselector
Rule 89    execute_item -> rotated fullselector
Rule 90    execute_item -> facing relcoords
Rule 91    execute_item -> facing fullselector
Rule 92    execute_item -> align ID
Rule 93    execute_item -> at fullselector
Rule 94    execute_item -> at relcoords
Rule 95    execute_item -> at fullselector relcoords
Rule 96    execute_item -> at vector_expr
Rule 97    execute_item -> at LPAREN virtualnumber RPAREN vector_expr
Rule 98    execute_item -> in overworld
Rule 99    execute_item -> in the_end
Rule 100   execute_item -> in the_nether
Rule 101   codeblock -> for ATID in fullselector newlines blocklist end
Rule 102   conditions -> condition
Rule 103   conditions -> condition and conditions
Rule 104   condition -> variable EQUALEQUAL fullselector
Rule 105   condition -> fullselector EQUALEQUAL variable
Rule 106   condition -> fullselector
Rule 107   condition -> variable LT comparison
Rule 108   condition -> variable LEQ comparison
Rule 109   condition -> variable EQUALEQUAL comparison
Rule 110   condition -> variable GT comparison
Rule 111   condition -> variable GEQ comparison
Rule 112   condition -> vector_var EQUALEQUAL vector_var
Rule 113   condition -> variable
Rule 114   condition -> not variable
Rule 115   condition -> block relcoords ID
Rule 116   comparison -> virtualinteger
Rule 117   comparison -> variable
Rule 118   if_block -> if PYTHON newlines blocklist end
Rule 119   if_block -> if PYTHON newlines blocklist else newlines blocklist end
Rule 120   while_block -> while conditions newlines blocklist end
Rule 121   while_block -> while conditions execute_items newlines blocklist end
Rule 122   for_block -> for ID EQUALS expr to expr by expr newlines blocklist end
Rule 123   for_block -> for ID EQUALS expr to expr newlines blocklist end
Rule 124   switch_block -> switch expr newlines cases end
Rule 125   cases -> switch_case newlines
Rule 126   cases -> switch_case newlines cases
Rule 127   switch_case -> case virtualinteger newlines blocklist end
Rule 128   switch_case -> case virtualinteger to virtualinteger newlines blocklist end
Rule 129   switch_case -> case DOLLAR ID in PYTHON newlines blocklist end
Rule 130   tell_block -> tell fullselector PYTHON
Rule 131   codeblock -> title fullselector PYTHON
Rule 132   codeblock -> subtitle fullselector PYTHON
Rule 133   codeblock -> actionbar fullselector PYTHON
Rule 134   codeblock -> title fullselector virtualinteger virtualinteger virtualinteger PYTHON
Rule 135   codeblock -> subtitle fullselector virtualinteger virtualinteger virtualinteger PYTHON
Rule 136   codeblock -> actionbar fullselector virtualinteger virtualinteger virtualinteger PYTHON
Rule 137   function_call_block -> function_call
Rule 138   method_call_block -> method_call
Rule 139   macro_call_block -> macro_call
Rule 140   pythonassignment_block -> pythonassignment
Rule 141   assignment_block -> assignment
Rule 142   vector_assignment_block -> vector_assignment
Rule 143   vector_assignment_scalar_block -> vector_assignment_scalar
Rule 144   selectorassignment_block -> selectorassignment
Rule 145   number -> INTEGER
Rule 146   number -> HEX
Rule 147   number -> BINARY
Rule 148   number -> MINUS INTEGER
Rule 149   number -> MINUS HEX
Rule 150   number -> MINUS BINARY
Rule 151   number -> FLOAT
Rule 152   number -> MINUS FLOAT
Rule 153   virtualnumber -> number
Rule 154   virtualnumber -> DOLLAR ID
Rule 155   virtualinteger -> INTEGER
Rule 156   virtualinteger -> HEX
Rule 157   virtualinteger -> BINARY
Rule 158   virtualinteger -> MINUS INTEGER
Rule 159   virtualinteger -> MINUS HEX
Rule 160   virtualinteger -> MINUS BINARY
Rule 161   virtualinteger -> DOLLAR ID
Rule 162   blocktag -> define block ID newlines block_list end
Rule 163   block_list -> ID newlines block_list
Rule 164   block_list -> ID newlines
Rule 165   selectorassignment -> ATID EQUALS fullselector
Rule 166   selector_define_block -> define ATID EQUALS fullselector newlines selector_definition end
Rule 167   selector_definition -> empty
Rule 168   selector_definition -> selector_item newlines selector_definition
Rule 169   selector_item -> create PYTHON
Rule 170   selector_item -> ID EQUALS data_path data_type virtualnumber
Rule 171   selector_item -> ID EQUALS data_path data_type
Rule 172   selector_item -> LT ID GT EQUALS data_path data_type virtualnumber
Rule 173   selector_item -> LT ID GT EQUALS data_path data_type
Rule 174   selector_item -> functionsection
Rule 175   data_path -> ID
Rule 176   data_path -> ID LBRACK virtualinteger RBRACK
Rule 177   data_path -> data_path DOT data_path
Rule 178   data_type -> byte
Rule 179   data_type -> double
Rule 180   data_type -> float
Rule 181   data_type -> int
Rule 182   data_type -> long
Rule 183   data_type -> short
Rule 184   array_definition -> array ID LBRACK virtualinteger RBRACK
Rule 185   array_definition -> array ID LBRACK virtualinteger to virtualinteger RBRACK
Rule 186   create_block -> create ATID relcoords
Rule 187   create_block -> create ATID
Rule 188   pythonassignment -> DOLLAR ID PYTHON
Rule 189   qualifiers -> qualifiers COMMA qualifier
Rule 190   qualifiers -> qualifiers and qualifier
Rule 191   qualifiers -> qualifier
Rule 192   qualifiers -> empty
Rule 193   qualifier -> virtualinteger
Rule 194   qualifier -> ID EQUALS virtualinteger
Rule 195   qualifier -> ID EQUALS ID
Rule 196   qualifier -> ID EQUALEQUAL virtualinteger
Rule 197   qualifier -> ID GEQ virtualinteger
Rule 198   qualifier -> ID LEQ virtualinteger
Rule 199   qualifier -> ID GT virtualinteger
Rule 200   qualifier -> ID LT virtualinteger
Rule 201   qualifier -> ID EQUALS virtualinteger DOT DOT virtualinteger
Rule 202   qualifier -> ID EQUALS DOT DOT virtualinteger
Rule 203   qualifier -> ID EQUALS virtualinteger DOT DOT
Rule 204   qualifier -> ID EQUALS
Rule 205   qualifier -> ID EQUALS NOT ID
Rule 206   qualifier -> ID
Rule 207   qualifier -> not ID
Rule 208   fullselector -> ATID
Rule 209   fullselector -> ATID LBRACK qualifiers RBRACK
Rule 210   relcoord -> virtualnumber
Rule 211   relcoord -> TILDE virtualnumber
Rule 212   relcoord -> TILDEEMPTY
Rule 213   relcoord -> TILDE
Rule 214   localcoord -> POWER virtualnumber
Rule 215   localcoord -> POWEREMPTY
Rule 216   localcoord -> POWER
Rule 217   relcoords -> virtualnumber virtualnumber virtualnumber
Rule 218   relcoords -> relcoord relcoord relcoord
Rule 219   relcoords -> localcoord localcoord localcoord
Rule 220   assignment -> return expr
Rule 221   assignment -> variable EQUALS expr
Rule 222   assignment -> variable PLUSEQUALS expr
Rule 223   assignment -> variable MINUSEQUALS expr
Rule 224   assignment -> variable TIMESEQUALS expr
Rule 225   assignment -> variable DIVIDEEQUALS expr
Rule 226   assignment -> variable MODEQUALS expr
Rule 227   assignment -> variable PLUSPLUS
Rule 228   assignment -> variable MINUSMINUS
Rule 229   assignment -> variable EQUALS fullselector
Rule 230   assignment -> variable EQUALS create_block
Rule 231   vector_assignment -> vector_var EQUALS vector_expr
Rule 232   vector_assignment -> vector_var PLUSEQUALS vector_expr
Rule 233   vector_assignment -> vector_var MINUSEQUALS vector_expr
Rule 234   vector_assignment_scalar -> vector_var EQUALS expr
Rule 235   vector_assignment_scalar -> vector_var PLUSEQUALS expr
Rule 236   vector_assignment_scalar -> vector_var MINUSEQUALS expr
Rule 237   vector_assignment_scalar -> vector_var TIMESEQUALS expr
Rule 238   vector_assignment_scalar -> vector_var DIVIDEEQUALS expr
Rule 239   vector_assignment_scalar -> vector_var MODEQUALS expr
Rule 240   vector_var -> LT ID GT
Rule 241   vector_var -> fullselector DOT LT ID GT
Rule 242   vector_var -> LT variable COMMA variable COMMA variable GT
Rule 243   expr -> expr PLUS expr
Rule 244   expr -> expr MINUS expr
Rule 245   expr -> expr TIMES expr
Rule 246   expr -> expr DIVIDE expr
Rule 247   expr -> expr MOD expr
Rule 248   expr -> expr POWER INTEGER
Rule 249   expr -> expr POWER HEX
Rule 250   expr -> expr POWER BINARY
Rule 251   expr -> vector_expr TIMES vector_expr
Rule 252   expr -> virtualinteger
Rule 253   expr -> scale
Rule 254   expr -> ID
Rule 255   expr -> ID LBRACK virtualinteger RBRACK
Rule 256   expr -> ID LBRACK expr RBRACK
Rule 257   expr -> fullselector DOT ID
Rule 258   expr -> function_call
Rule 259   expr -> LPAREN expr RPAREN
Rule 260   expr -> MINUS expr
Rule 261   vector_expr -> LPAREN vector_expr RPAREN
Rule 262   vector_expr -> LT expr COMMA expr COMMA expr GT
Rule 263   vector_expr -> LT ID GT
Rule 264   vector_expr -> fullselector DOT LT ID GT
Rule 265   vector_expr -> vector_expr PLUS vector_expr
Rule 266   vector_expr -> vector_expr MINUS vector_expr
Rule 267   vector_expr -> vector_expr PLUS expr
Rule 268   vector_expr -> vector_expr MINUS expr
Rule 269   vector_expr -> vector_expr TIMES expr
Rule 270   vector_expr -> vector_expr DIVIDE expr
Rule 271   vector_expr -> vector_expr MOD expr
Rule 272   vector_expr -> expr PLUS vector_expr
Rule 273   vector_expr -> expr TIMES vector_expr
Rule 274   vector_expr -> MINUS vector_expr
Rule 275   vector_expr -> here
Rule 276   vector_expr -> here LPAREN virtualnumber RPAREN
Rule 277   function_call -> ID LPAREN exprlist RPAREN
Rule 278   method_call -> fullselector DOT ID LPAREN exprlist RPAREN
Rule 279   exprlist -> exprlist COMMA expr
Rule 280   exprlist -> expr
Rule 281   exprlist -> empty
Rule 282   template_function_call -> ID LT macro_call_params GT LPAREN exprlist RPAREN
Rule 283   macro_call -> DOLLAR ID macro_call_args
Rule 284   macro_call_args -> LPAREN macro_call_params RPAREN
Rule 285   macro_call_args -> empty
Rule 286   macro_call_params -> macro_call_param COMMA macro_call_params
Rule 287   macro_call_params -> macro_call_param
Rule 288   macro_call_params -> empty
Rule 289   macro_call_param -> virtualnumber
Rule 290   empty -> <empty>

Terminals, with rules where they appear

ATID                 : 76 78 101 165 166 186 187 208 209
BINARY               : 147 150 157 160 250
COMMA                : 25 32 189 242 242 262 262 279 286
COMMAND              : 71
COMMENT              : 11 40 46 70
DIVIDE               : 246 270
DIVIDEEQUALS         : 225 238
DOLLAR               : 22 25 26 73 129 154 161 188 283
DOT                  : 42 74 177 201 201 202 202 203 203 241 257 264 278
EQUALEQUAL           : 104 105 109 112 196
EQUALS               : 122 123 165 166 170 171 172 173 194 195 201 202 203 204 205 221 229 230 231 234
FLOAT                : 151 152
GEQ                  : 111 197
GT                   : 21 110 172 173 199 240 241 242 262 263 264 282
HEX                  : 146 149 156 159 249
ID                   : 19 20 21 22 25 26 32 33 42 43 44 45 73 74 92 115 122 123 129 154 161 162 163 164 170 171 172 173 175 176 184 185 188 194 195 195 196 197 198 199 200 201 202 203 204 205 205 206 207 240 241 254 255 256 257 263 264 277 278 282 283
INTEGER              : 145 148 155 158 248
LBRACK               : 44 45 176 184 185 209 255 256
LEQ                  : 108 198
LPAREN               : 20 21 23 76 78 97 259 261 276 277 278 282 284
LT                   : 21 107 172 173 200 240 241 242 262 263 264 282
MINUS                : 148 149 150 152 158 159 160 244 260 266 268 274
MINUSEQUALS          : 223 233 236
MINUSMINUS           : 228
MOD                  : 247 271
MODEQUALS            : 226 239
NEWLINE              : 28 29
NOT                  : 205
PLUS                 : 243 265 267 272
PLUSEQUALS           : 222 232 235
PLUSPLUS             : 227
POWER                : 214 216 248 249 250
POWEREMPTY           : 215
PYTHON               : 3 4 6 73 118 119 129 130 131 132 133 134 135 136 169 188
RBRACK               : 44 45 176 184 185 209 255 256
RPAREN               : 20 21 23 76 78 97 259 261 276 277 278 282 284
TILDE                : 211 213
TILDEEMPTY           : 212
TIMES                : 245 251 269 273
TIMESEQUALS          : 224 237
actionbar            : 133 136
align                : 92
and                  : 103 190
array                : 184 185
as                   : 75 76 77 78 79 80 88
at                   : 93 94 95 96 97
block                : 115 162
by                   : 122
byte                 : 178
case                 : 127 128 129
clock                : 19
create               : 169 186 187
define               : 162 166
desc                 : 4
dir                  : 3
do                   : 77 78 80 82
double               : 179
else                 : 119
end                  : 18 19 20 21 22 73 74 75 76 79 81 101 118 119 120 121 122 123 124 127 128 129 162 166
error                : 
facing               : 90 91
float                : 180
for                  : 73 101 122 123
function             : 20 21
here                 : 275 276
if                   : 86 118 119
in                   : 73 98 99 100 101 129
int                  : 181
long                 : 182
macro                : 22
move                 : 72
not                  : 114 207
overworld            : 98
reset                : 18
return               : 220
rotated              : 89
scale                : 6 253
short                : 183
subtitle             : 132 135
switch               : 124
tell                 : 130
the_end              : 99
the_nether           : 100
then                 : 83
title                : 131 134
to                   : 122 123 128 185
trigger              : 74
unless               : 87
while                : 120 121

Nonterminals, with rules where they appear

array_definition     : 39
assignment           : 141
assignment_block     : 66
block_list           : 162 163
blocklist            : 18 19 20 21 22 48 73 74 75 76 79 81 101 118 119 119 120 121 122 123 127 128 129
blocktag             : 38
cases                : 124 126
clocksection         : 13
codeblock            : 48 77 78 80 82 83
command_block        : 51
comment_block        : 50
comparison           : 107 108 109 110 111
condition            : 102 103
conditions           : 86 87 103 120 121
create_block         : 53 79 80 230
data_path            : 170 171 172 173 177 177
data_type            : 170 171 172 173
empty                : 5 7 9 12 24 27 31 34 41 47 49 167 192 281 285 288
execute_block        : 57
execute_item         : 84 85
execute_items        : 81 82 83 85 121
expr                 : 2 45 122 122 122 123 123 124 220 221 222 223 224 225 226 234 235 236 237 238 239 243 243 244 244 245 245 246 246 247 247 248 249 250 256 259 260 262 262 262 267 268 269 270 271 272 273 279 280
exprlist             : 277 278 279 282
for_block            : 54
fullselector         : 42 72 74 88 89 91 93 95 101 104 105 106 130 131 132 133 134 135 136 165 166 229 241 257 264 278
function_call        : 137 258
function_call_block  : 61
functionsection      : 14 174
id_list              : 20 21 32
if_block             : 55
localcoord           : 219 219 219
macro_args           : 22
macro_call           : 139
macro_call_args      : 283
macro_call_block     : 64
macro_call_param     : 286 287
macro_call_params    : 282 284 286
macro_params         : 21 23 25
macrosection         : 16
method_call          : 138
method_call_block    : 63
move_block           : 52
newlines             : 3 4 6 8 18 19 20 21 22 28 30 35 36 37 38 39 40 48 73 74 75 76 79 81 101 118 119 119 120 121 122 123 124 125 126 127 128 129 162 163 164 166 168
number               : 153
optassignments       : 3 35 36 37 38 39 40
optcomment           : 48
optcomments          : 3 10 11
optdesc              : 3
optnewlines          : 11
optscale             : 3
parsed               : 0
program              : 1
pythonassignment     : 35 140
pythonassignment_block : 65
qualifier            : 189 190 191
qualifiers           : 189 190 209
relcoord             : 218 218 218
relcoords            : 72 90 94 95 115 186
resetsection         : 15
section              : 10
section_commented    : 8
sections             : 3 8
selector_define_block : 37
selector_definition  : 166 168
selector_item        : 168
selectorassignment   : 36 144
selectorassignment_block : 67
switch_block         : 59
switch_case          : 125 126
tell_block           : 60
template_function_call : 62
template_function_section : 17
trigger_block        : 56
variable             : 75 76 77 78 104 105 107 108 109 110 111 113 114 117 221 222 223 224 225 226 227 228 229 230 242 242 242
vector_assignment    : 142
vector_assignment_block : 68
vector_assignment_scalar : 143
vector_assignment_scalar_block : 69
vector_expr          : 96 97 231 232 233 251 251 261 265 265 266 266 267 268 269 270 271 272 273 274
vector_var           : 112 112 231 232 233 234 235 236 237 238 239
virtualinteger       : 44 116 127 128 128 134 134 134 135 135 135 136 136 136 176 184 185 185 193 194 196 197 198 199 200 201 201 202 203 252 255
virtualnumber        : 97 170 172 210 211 214 217 217 217 276 289
while_block          : 58

Parsing method: LALR

state 0

    (0) S' -> . parsed
    (1) parsed -> . program
    (2) parsed -> . expr
    (3) program -> . optcomments dir PYTHON newlines optdesc optscale optassignments sections
    (243) expr -> . expr PLUS expr
    (244) expr -> . expr MINUS expr
    (245) expr -> . expr TIMES expr
    (246) expr -> . expr DIVIDE expr
    (247) expr -> . expr MOD expr
    (248) expr -> . expr POWER INTEGER
    (249) expr -> . expr POWER HEX
    (250) expr -> . expr POWER BINARY
    (251) expr -> . vector_expr TIMES vector_expr
    (252) expr -> . virtualinteger
    (253) expr -> . scale
    (254) expr -> . ID
    (255) expr -> . ID LBRACK virtualinteger RBRACK
    (256) expr -> . ID LBRACK expr RBRACK
    (257) expr -> . fullselector DOT ID
    (258) expr -> . function_call
    (259) expr -> . LPAREN expr RPAREN
    (260) expr -> . MINUS expr
    (11) optcomments -> . COMMENT optnewlines optcomments
    (12) optcomments -> . empty
    (261) vector_expr -> . LPAREN vector_expr RPAREN
    (262) vector_expr -> . LT expr COMMA expr COMMA expr GT
    (263) vector_expr -> . LT ID GT
    (264) vector_expr -> . fullselector DOT LT ID GT
    (265) vector_expr -> . vector_expr PLUS vector_expr
    (266) vector_expr -> . vector_expr MINUS vector_expr
    (267) vector_expr -> . vector_expr PLUS expr
    (268) vector_expr -> . vector_expr MINUS expr
    (269) vector_expr -> . vector_expr TIMES expr
    (270) vector_expr -> . vector_expr DIVIDE expr
    (271) vector_expr -> . vector_expr MOD expr
    (272) vector_expr -> . expr PLUS vector_expr
    (273) vector_expr -> . expr TIMES vector_expr
    (274) vector_expr -> . MINUS vector_expr
    (275) vector_expr -> . here
    (276) vector_expr -> . here LPAREN virtualnumber RPAREN
    (155) virtualinteger -> . INTEGER
    (156) virtualinteger -> . HEX
    (157) virtualinteger -> . BINARY
    (158) virtualinteger -> . MINUS INTEGER
    (159) virtualinteger -> . MINUS HEX
    (160) virtualinteger -> . MINUS BINARY
    (161) virtualinteger -> . DOLLAR ID
    (208) fullselector -> . ATID
    (209) fullselector -> . ATID LBRACK qualifiers RBRACK
    (277) function_call -> . ID LPAREN exprlist RPAREN
    (290) empty -> .

    scale           shift and go to state 5
    ID              shift and go to state 15
    LPAREN          shift and go to state 14
    MINUS           shift and go to state 3
    COMMENT         shift and go to state 4
    LT              shift and go to state 7
    here            shift and go to state 13
    INTEGER         shift and go to state 9
    HEX             shift and go to state 12
    BINARY          shift and go to state 16
    DOLLAR          shift and go to state 11
    ATID            shift and go to state 17
    dir             reduce using rule 290 (empty -> .)

    optcomments                    shift and go to state 1
    vector_expr                    shift and go to state 18
    fullselector                   shift and go to state 19
    expr                           shift and go to state 20
    virtualinteger                 shift and go to state 21
    function_call                  shift and go to state 2
    program                        shift and go to state 8
    parsed                         shift and go to state 6
    empty                          shift and go to state 10

state 1

    (3) program -> optcomments . dir PYTHON newlines optdesc optscale optassignments sections

    dir             shift and go to state 22


state 2

    (258) expr -> function_call .

    PLUS            reduce using rule 258 (expr -> function_call .)
    MINUS           reduce using rule 258 (expr -> function_call .)
    TIMES           reduce using rule 258 (expr -> function_call .)
    DIVIDE          reduce using rule 258 (expr -> function_call .)
    MOD             reduce using rule 258 (expr -> function_call .)
    POWER           reduce using rule 258 (expr -> function_call .)
    $end            reduce using rule 258 (expr -> function_call .)
    COMMA           reduce using rule 258 (expr -> function_call .)
    RPAREN          reduce using rule 258 (expr -> function_call .)
    RBRACK          reduce using rule 258 (expr -> function_call .)
    if              reduce using rule 258 (expr -> function_call .)
    unless          reduce using rule 258 (expr -> function_call .)
    as              reduce using rule 258 (expr -> function_call .)
    rotated         reduce using rule 258 (expr -> function_call .)
    facing          reduce using rule 258 (expr -> function_call .)
    align           reduce using rule 258 (expr -> function_call .)
    at              reduce using rule 258 (expr -> function_call .)
    in              reduce using rule 258 (expr -> function_call .)
    do              reduce using rule 258 (expr -> function_call .)
    then            reduce using rule 258 (expr -> function_call .)
    NEWLINE         reduce using rule 258 (expr -> function_call .)
    COMMENT         reduce using rule 258 (expr -> function_call .)
    GT              reduce using rule 258 (expr -> function_call .)
    to              reduce using rule 258 (expr -> function_call .)
    by              reduce using rule 258 (expr -> function_call .)


state 3

    (260) expr -> MINUS . expr
    (274) vector_expr -> MINUS . vector_expr
    (158) virtualinteger -> MINUS . INTEGER
    (159) virtualinteger -> MINUS . HEX
    (160) virtualinteger -> MINUS . BINARY
    (243) expr -> . expr PLUS expr
    (244) expr -> . expr MINUS expr
    (245) expr -> . expr TIMES expr
    (246) expr -> . expr DIVIDE expr
    (247) expr -> . expr MOD expr
    (248) expr -> . expr POWER INTEGER
    (249) expr -> . expr POWER HEX
    (250) expr -> . expr POWER BINARY
    (251) expr -> . vector_expr TIMES vector_expr
    (252) expr -> . virtualinteger
    (253) expr -> . scale
    (254) expr -> . ID
    (255) expr -> . ID LBRACK virtualinteger RBRACK
    (256) expr -> . ID LBRACK expr RBRACK
    (257) expr -> . fullselector DOT ID
    (258) expr -> . function_call
    (259) expr -> . LPAREN expr RPAREN
    (260) expr -> . MINUS expr
    (261) vector_expr -> . LPAREN vector_expr RPAREN
    (262) vector_expr -> . LT expr COMMA expr COMMA expr GT
    (263) vector_expr -> . LT ID GT
    (264) vector_expr -> . fullselector DOT LT ID GT
    (265) vector_expr -> . vector_expr PLUS vector_expr
    (266) vector_expr -> . vector_expr MINUS vector_expr
    (267) vector_expr -> . vector_expr PLUS expr
    (268) vector_expr -> . vector_expr MINUS expr
    (269) vector_expr -> . vector_expr TIMES expr
    (270) vector_expr -> . vector_expr DIVIDE expr
    (271) vector_expr -> . vector_expr MOD expr
    (272) vector_expr -> . expr PLUS vector_expr
    (273) vector_expr -> . expr TIMES vector_expr
    (274) vector_expr -> . MINUS vector_expr
    (275) vector_expr -> . here
    (276) vector_expr -> . here LPAREN virtualnumber RPAREN
    (155) virtualinteger -> . INTEGER
    (156) virtualinteger -> . HEX
    (157) virtualinteger -> . BINARY
    (158) virtualinteger -> . MINUS INTEGER
    (159) virtualinteger -> . MINUS HEX
    (160) virtualinteger -> . MINUS BINARY
    (161) virtualinteger -> . DOLLAR ID
    (208) fullselector -> . ATID
    (209) fullselector -> . ATID LBRACK qualifiers RBRACK
    (277) function_call -> . ID LPAREN exprlist RPAREN

    INTEGER         shift and go to state 24
    HEX             shift and go to state 25
    BINARY          shift and go to state 26
    scale           shift and go to state 5
    ID              shift and go to state 15
    LPAREN          shift and go to state 14
    MINUS           shift and go to state 3
    LT              shift and go to state 7
    here            shift and go to state 13
    DOLLAR          shift and go to state 11
    ATID            shift and go to state 17

    vector_expr                    shift and go to state 23
    fullselector                   shift and go to state 19
    expr                           shift and go to state 27
    function_call                  shift and go to state 2
    virtualinteger                 shift and go to state 21

state 4

    (11) optcomments -> COMMENT . optnewlines optcomments
    (30) optnewlines -> . newlines
    (31) optnewlines -> . empty
    (28) newlines -> . NEWLINE newlines
    (29) newlines -> . NEWLINE
    (290) empty -> .

    NEWLINE         shift and go to state 28
    COMMENT         reduce using rule 290 (empty -> .)
    dir             reduce using rule 290 (empty -> .)
    clock           reduce using rule 290 (empty -> .)
    function        reduce using rule 290 (empty -> .)
    reset           reduce using rule 290 (empty -> .)
    macro           reduce using rule 290 (empty -> .)

    newlines                       shift and go to state 31
    empty                          shift and go to state 30
    optnewlines                    shift and go to state 29

state 5

    (253) expr -> scale .

    PLUS            reduce using rule 253 (expr -> scale .)
    MINUS           reduce using rule 253 (expr -> scale .)
    TIMES           reduce using rule 253 (expr -> scale .)
    DIVIDE          reduce using rule 253 (expr -> scale .)
    MOD             reduce using rule 253 (expr -> scale .)
    POWER           reduce using rule 253 (expr -> scale .)
    $end            reduce using rule 253 (expr -> scale .)
    COMMA           reduce using rule 253 (expr -> scale .)
    RPAREN          reduce using rule 253 (expr -> scale .)
    RBRACK          reduce using rule 253 (expr -> scale .)
    if              reduce using rule 253 (expr -> scale .)
    unless          reduce using rule 253 (expr -> scale .)
    as              reduce using rule 253 (expr -> scale .)
    rotated         reduce using rule 253 (expr -> scale .)
    facing          reduce using rule 253 (expr -> scale .)
    align           reduce using rule 253 (expr -> scale .)
    at              reduce using rule 253 (expr -> scale .)
    in              reduce using rule 253 (expr -> scale .)
    do              reduce using rule 253 (expr -> scale .)
    then            reduce using rule 253 (expr -> scale .)
    NEWLINE         reduce using rule 253 (expr -> scale .)
    COMMENT         reduce using rule 253 (expr -> scale .)
    GT              reduce using rule 253 (expr -> scale .)
    to              reduce using rule 253 (expr -> scale .)
    by              reduce using rule 253 (expr -> scale .)


state 6

    (0) S' -> parsed .



state 7

    (262) vector_expr -> LT . expr COMMA expr COMMA expr GT
    (263) vector_expr -> LT . ID GT
    (243) expr -> . expr PLUS expr
    (244) expr -> . expr MINUS expr
    (245) expr -> . expr TIMES expr
    (246) expr -> . expr DIVIDE expr
    (247) expr -> . expr MOD expr
    (248) expr -> . expr POWER INTEGER
    (249) expr -> . expr POWER HEX
    (250) expr -> . expr POWER BINARY
    (251) expr -> . vector_expr TIMES vector_expr
    (252) expr -> . virtualinteger
    (253) expr -> . scale
    (254) expr -> . ID
    (255) expr -> . ID LBRACK virtualinteger RBRACK
    (256) expr -> . ID LBRACK expr RBRACK
    (257) expr -> . fullselector DOT ID
    (258) expr -> . function_call
    (259) expr -> . LPAREN expr RPAREN
    (260) expr -> . MINUS expr
    (261) vector_expr -> . LPAREN vector_expr RPAREN
    (262) vector_expr -> . LT expr COMMA expr COMMA expr GT
    (263) vector_expr -> . LT ID GT
    (264) vector_expr -> . fullselector DOT LT ID GT
    (265) vector_expr -> . vector_expr PLUS vector_expr
    (266) vector_expr -> . vector_expr MINUS vector_expr
    (267) vector_expr -> . vector_expr PLUS expr
    (268) vector_expr -> . vector_expr MINUS expr
    (269) vector_expr -> . vector_expr TIMES expr
    (270) vector_expr -> . vector_expr DIVIDE expr
    (271) vector_expr -> . vector_expr MOD expr
    (272) vector_expr -> . expr PLUS vector_expr
    (273) vector_expr -> . expr TIMES vector_expr
    (274) vector_expr -> . MINUS vector_expr
    (275) vector_expr -> . here
    (276) vector_expr -> . here LPAREN virtualnumber RPAREN
    (155) virtualinteger -> . INTEGER
    (156) virtualinteger -> . HEX
    (157) virtualinteger -> . BINARY
    (158) virtualinteger -> . MINUS INTEGER
    (159) virtualinteger -> . MINUS HEX
    (160) virtualinteger -> . MINUS BINARY
    (161) virtualinteger -> . DOLLAR ID
    (208) fullselector -> . ATID
    (209) fullselector -> . ATID LBRACK qualifiers RBRACK
    (277) function_call -> . ID LPAREN exprlist RPAREN

    ID              shift and go to state 32
    scale           shift and go to state 5
    LPAREN          shift and go to state 14
    MINUS           shift and go to state 3
    LT              shift and go to state 7
    here            shift and go to state 13
    INTEGER         shift and go to state 9
    HEX             shift and go to state 12
    BINARY          shift and go to state 16
    DOLLAR          shift and go to state 11
    ATID            shift and go to state 17
